# mctest

./: Cargo.toml  justfile
packs/empty/: pack.mcmeta
packs/empty/data/mctest/functions/: plan.mcfunction
packs/simple/: pack.mcmeta
packs/simple/data/mctest/functions/: list.mcfunction  plan.mcfunction  test1.mcfunction  test2.mcfunction
src/: main.rs  minecraft_client.rs  minecraft_server.rs  test.rs
src/minecraft_client/: mcp.rs
