[package]
name = "mctest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
directories = "5.0.1"
fs_extra = "1.3.0"
mc-varint = "0.1.1"
md5 = "0.7.0"
num = "0.4.1"
once_cell = "1.18.0"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.10.1"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tempdir = "0.3.7"
uuid = { version = "1.5.0", features = ["v4", "v3"] }
